--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div class="social-buttons">
     <button onclick="openFacebook()">Facebook</button>
     <button onclick="openWhatsApp()">WhatsApp</button>
+    <button onclick="openCreator()">Creator Web</button>
   </div>
 </div>
       <p id="message"></p>
