--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Asif's Portfolio</title>
+  <title>Noor's Portfolio</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <div class="container">
     <div class="profile">
       <img src="Noor.jpg" alt="Profile Picture" class="profile-pic"/>
-      <h1>Ashraful Sheikh Asif</h1>
-      <p>Date of Birth: December 27, 2004</p>
+      <h1>Noor Muhammad Sani Ashrafi</h1>
+      <p>Date of Birth: June 18, 2004</p>
       <p>Location: Narsingdi, Bangladesh</p>
-      <p>Field: Science (2nd Year)</p>
-      <p>Interested in: Graphics Design, 3D, Animation, Freelancing</p>
+      <p>Education: BBA (Management)</p>
+      <p>Interested in: Marketing, 3D video, Photography, Freelancing</p>
     </div>
       <div class="button-section">
   <button onclick="showMessage()">Say Hello</button>
